Fix SubNav button text align

--- a/src/components/base/SubNav/SubNav.scss
+++ b/src/components/base/SubNav/SubNav.scss
@@ -19,4 +19,12 @@
     height: $button-primary-height;
     box-shadow: $drop-shadow;
   }
+
+  &__menu {
+    margin-bottom: 2px;
+  }
+
+  &__dropdown {
+    margin-bottom: 2px;
+  }
 }
