--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -45,6 +45,10 @@ strong {
   font-family: $font-carter;
 }
 
+.avenir {
+  font-family: $font-avenir;
+}
+
 .semi-bold {
   font-weight: 600;
 }
